Issue #6543: Write the traceback in the terminal encoding instead of utf-8. Fix the encoding of the modules filename.

Reindent also traceback.h, just because I hate tabs :-)